2008-01-29  Sebastien Pouliot  <sebastien@ximian.com>

	* AvoidUninstantiatedInternalClassesRule.cs: Reduce false positives
	a bit more by handling "out" and variable types.

2008-01-13  Sebastien Pouliot  <sebastien@ximian.com>

	* EmptyDestructorRule.cs: Use new IsFinalizer rock.

2008-01-11  Sebastien Pouliot  <sebastien@ximian.com> 

	* AvoidUncalledPrivateCodeRule.cs: Use new Location ctors.
	* AvoidUninstantiatedInternalClassesRule.cs: Use new Location ctors.
	* UseStringEmptyRule.cs: Use new Location ctors.
	* UsingStringLengthInsteadOfCheckingEmptyStringRule.cs: Don't 
	create MessageCollection until needed. Use new Location ctors.

2008-01-08  Sebastien Pouliot  <sebastien@ximian.com> 

	* AvoidUncalledPrivateCodeRule.cs: Don't report any serialization
	constructors since they are invoked by the runtime.
	* DontIgnoreMethodResultRule.cs: Don't report BeginInvoke methods
	that accept a Delegate (for any type). Better error reporting when a
	new unused instance is created.

2008-01-06  Sebastien Pouliot  <sebastien@ximian.com> 

	* AvoidToStringOnStringsRule.cs: Fix false positives on corlib (when
	an overloaded ToString, with parameters, is used).
	* AvoidUnusedParametersRule.cs: Fix false positives on corlib (where
	icalls were reported)
	* EmptyDestructorRule.cs: Simplify using rocks.

2008-01-05  Sebastien Pouliot  <sebastien@ximian.com> 

	* AvoidUninstantiatedInternalClassesRule.cs: Don't report this if 
	the class holds the assembly entry point (i.e. Main method).
	* DontIgnoreMethodResultRule.cs: Add Directory.CreateDirectory to
	stuff we can safely ignore. Change some methods to static.
	* Gendarme.Rules.Performance.mdp: Add linq to compiler options.

2008-01-04  Sebastien Pouliot  <sebastien@ximian.com> 

	* AvoidToStringOnStringsRule.cs: Simplified to use rocks
	* AvoidUncalledPrivateCodeRule.cs: Use IsGeneratedCode instead of 
	the older IsCompilerGenerated to avoid more false-positives.